--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.8.0
   change_app_package_name: ^1.4.0
   firebase_auth: ^5.3.3
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
