--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   firebase_auth: ^5.3.3
   flutter_riverpod: ^2.6.1
   dartz: ^0.10.1
+  cloud_firestore: ^5.5.0
+  provider: ^6.1.2
+  riverpod_annotation: ^2.6.1
+  riverpod_generator: ^2.6.2
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +55,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
