--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.1.2
   riverpod_annotation: ^2.6.1
   riverpod_generator: ^2.6.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
