feat: get user's current location

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,6 +11,7 @@ plugins {
 android {
     namespace = "com.runconnect.app"
     compileSdk = flutter.compileSdkVersion
+    // compileSdkVersion = 31
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
