--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,15 +12,14 @@ android {
     namespace = "com.runconnect.app"
     compileSdk = flutter.compileSdkVersion
     // compileSdkVersion = 31
-    ndkVersion = flutter.ndkVersion
+    ndkVersion "25.1.8937393"
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+      sourceCompatibility JavaVersion.VERSION_17
+      targetCompatibility JavaVersion.VERSION_17
     }
-
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+      jvmTarget = 17
     }
 
     defaultConfig {
