--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   geolocator: ^13.0.2
   geocoding: ^3.0.0
   uuid: ^4.5.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
