--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   geocoding: ^3.0.0
   uuid: ^4.5.1
   image_picker: ^1.1.2
+  firebase_storage: ^12.3.6
 
 dev_dependencies:
   flutter_test:
