ui: Fix app icon by removing padding around the launcher icon

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
         android:label="RunConnect"
         android:name="${applicationName}"
         android:enableOnBackInvokedCallback="true"
-        android:icon="@mipmap/ic_launcher">
+        android:roundIcon="@mipmap/round_launcher"
+        android:icon="@mipmap/run_connect_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
